# school_bus_booking_project

./: .gitignore  README.md  build-release.sh  dev.bat  dev.sh  docker-compose.yml
backend/: .env.example  Cargo.toml
backend/migrations/: 20260205001_initial_schema.sql  20260205002_seed_data.sql  20260205003_seed_trips.sql  20260205_001_initial_schema.sql  20260205_002_seed_data.sql
backend/src/: config.rs  db.rs  error.rs  main.rs
backend/src/handlers/: auth.rs  bookings.rs  buses.rs  dashboard.rs  mod.rs  payments.rs  trips.rs  users.rs
backend/src/middleware/: mod.rs
backend/src/models/: booking.rs  bus.rs  mod.rs  payment.rs  trip.rs  user.rs
backend/src/services/: auth.rs  email.rs  mod.rs  payment.rs
doc/: 01_Lastenheft.md  02_Pflichtenheft.md  03_Kaufmaennisches_Angebot.md  04_Kriterienkatalog.md  05_DSGVO_Datenschutzerklaerung.md  05_DSGVO_Einverstaendniserklaerungen.md  05_DSGVO_Verarbeitungsverzeichnis.md  06_Datensicherheitskonzept.md  Notiz hamdorf.md
frontend/: gen_icon.py  index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/api/: index.ts
frontend/src/assets/: main.css
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  theme.ts
frontend/src/types/: index.ts
frontend/src/views/: BookTripView.vue  BookingDetailView.vue  BookingsView.vue  ForgotPasswordView.vue  HomeView.vue  LoginView.vue  NotFoundView.vue  (+6 more)
release-artifacts/: BusBooker Pro-1.0.0-1.x86_64.rpm  BusBooker Pro_1.0.0_amd64.deb  SHA256SUMS.txt
(+10 files in other folders)
