[package]
name = "busbooker-api"
version = "0.1.0"
edition = "2021"
description = "REST API für das BusBooker Pro Buchungssystem"
authors = ["Sonnenschein Reisen GmbH"]

[dependencies]
# Web Framework
actix-web = "4"
actix-cors = "0.7"
actix-rt = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "mysql", "chrono", "uuid"] }
 
# Authentication
jsonwebtoken = "9"
argon2 = "0.5"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
thiserror = "1"
validator = { version = "0.16", features = ["derive"] }
rand = "0.8"

# Email
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder", "smtp-transport"] }

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
actix-test = "0.1"
