[package]
name = "busbooker-pro"
version = "1.0.0"
description = "BusBooker Pro - Busreisen-Buchungssystem für Sonnenschein Reisen"
authors = ["Sonnenschein Reisen"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "busbooker_pro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
